@@ -1,6 +1,8 @@
 v2.0.0.35
 Details about v1 to v2 conversion - ADDED
 Edit add listing page not loads with Beaver Builder - FIXED
+Countries table lib checking empty on non variable - FIXED
+Changes to loop widget for Beaver Builder themer layouts - CHANGED
 
 v2.0.0.34
 Added extra checks for pre_get_posts filters that were breaking some beaver builder template queries - CHANGED
